--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Daniel Coonan
 description: Computer Science Senior at the University of Texas
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/dsc.png
+avatar: https://raw.githubusercontent.com/dscoonan/dscoonan.github.io/master/images/dsc.png
 
 #
 # Flags below are optional
