--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: dscoonan
+  github: 
   instagram:
   linkedin:
-  pinterest: nope
+  pinterest:
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: jekyllrb
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
