--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: CS373 Fall 2015\: Daniel Coonan
+name: CS373 Fall 2015 Daniel Coonan
 
 # Short bio or description (displayed in the header)
 description: Computer Science Senior at the University of Texas
